chore: 🤖 tweak copy

--- a/posts/lets-talk-about-dia.mdx
+++ b/posts/lets-talk-about-dia.mdx
@@ -15,9 +15,7 @@ tags:
   - AI
 ---
 
-# Let's Talk About Dia
-
-## Arc was GOAT, But it's Time to Move On
+# Arc was G.O.A.T But it's Time to Move On
 
 The last several years I've been a card carrying member of the [Browser Company Fanatic's club](https://arc.net). Pretending to nod along in whatever discussion is happening waiting for the perfect moment to interject with _"yeah but just use Arc it's the best browser ever made"_. To which the response is usually something like _"Sir this is a Wendy's"_.
 
@@ -42,10 +40,10 @@ When it all comes down to it, horizontal tabs were a mistake. Arc took me a few 
 I've never used a browser that sweats the small stuff as much as Arc. There were so many comfortable cozy quality of life adjustments to the browsing experience like:
 
 1. Automatic tidying of loose unpinned tabs each day when you close up shop.
-2. The command pallet interface surrounding search _(command pallets rock, they are an amazing affordance and should be used more across the board)_.
+2. The command palette interface surrounding search _(command palettes rock, they are an amazing affordance and should be used more across the board)_.
 3. Opening up links in a "mini preview window" before opening up a brand new window altogether.
 4. Power user keyboard shortcuts that make sharing links so easy you'll never want to do things the old way ever again.
-5. Profiles that help you group not only group your tabs, but properly segment them for privacy reasons so that annoying cookies don't follow you everywhere you go _(looking at you LinkedIn & Google)_.
+5. Profiles that help you not only group your tabs, but properly segment them for privacy reasons so that annoying cookies don't follow you everywhere you go _(looking at you LinkedIn & Google)_.
 
 <br />
 
@@ -57,20 +55,28 @@ At the end of the day, I'm still rooting for Browser Company's success. So when 
 But what was promised and what's currently there left me feeling, well... whelmed.
 
 <br />
-Dia promises to be this super AI forward, super-powered browser. Built from the ground up with a different browsing
-experience in mind. But the UX today is largely a Safari clone with an AI chat thread on the right hand side of the
-screen. And that in and of itself is somewhat useful. I can imagine serious utility in not needing to have an LLM scrape
-links I'm pasting in as I go, and having the chat window have the context of the current page I'm on seems like a good
-deal, in so far as I there are strict privacy controls surrounding when I want the LLM on or totally turned off.
+Dia promises to be this AI forward, super-powered browser. Built from the ground up with a different browsing experience
+in mind. But the UX today is largely a Safari clone with an AI chat thread on the right hand side of the screen. While
+that value proposition in and of itself does have utility, it feels like it's releasing in a way that's already somewhat
+behind. On the one hand having the chat window have the context of the current page I'm on seems like a good deal, in so
+far as there are strict privacy controls surrounding when I want the LLM turned on or off.
 
 <br />
 But I was left somewhat confused. When Im using ChatGPT or Claude, I can specify the model I want to use. In Dia, they
 won't even tell you what model is powering the experience under the hood. With anthropic products I can turn on chain of
-thought through simple menu toggles. In Dia? Nothing. What if I want to give the chat thread I'm on access to every tab
-I have open, or collect context from many sources at once to power some deep research task? Eh, sorry. That's not really
-a thing. It's clear that Dia is leveraging AI. But in an overtly opaque way that makes really using it as an AI
-superpower challenging. I have no insight into what's happening. I have no idea what information browser company is
-collecting surrounding my personal browsing data.
+thought through simple menu toggles. In Dia? Nothing. What if I want to restrict exactly which tabs or elements of the
+browser the LLM has access to in any given moment? Eh, sorry. That's not really a thing. It's clear that Dia is
+leveraging AI. But in an overtly opaque way. I have no insight into what's happening. And no clear path to construct
+workflows that feel meaningful, or even industry standard compared to what else is being built in the market. And the
+cherry on top is that I have no idea what information browser company is collecting surrounding my personal browsing
+data.
+
+<br />
+
+Ultimately this is all forgivable. There still plenty of time to add in the bells and whistles one might expect.
+The next question would be how's the UI / UX compared to Arc? Well Dia is a... browser. Just a normal browser.
+It's got standard horizontal tabs. And candidly feels like what Chrome, Safari and everyone else is doing.
+All those fit and finish items Arc had didn't make it out of cold storage for this round.
 
 <br />
 
